--- a/config.yaml
+++ b/config.yaml
@@ -14,4 +14,4 @@ wal:
   flush_batch_size: 100
   flush_batch_timeout: 10
   max_segment_size: 10485760
-  data_directory: "/data/kv_db/wal"
+  data_directory: "/tmp/kv_db/wal"
