--- a/config.yaml
+++ b/config.yaml
@@ -10,8 +10,11 @@ network:
 logging:
   level: "info"
   output: "stdout"
-wal:  
+wal:
   flush_batch_size: 100
   flush_batch_timeout: 10
   max_segment_size: 10485760
   data_directory: "/tmp/kv_db/wal"
+replication:
+  role: "master"
+  master_address: "127.0.0.1:3223"
